withALB/kube-manifest4/webapp1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1-deployment
  namespace: secret-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      name: webapp1
      labels:
        app: webapp1
    spec:
      serviceAccountName: demo-sa
      containers:
        - name: recommendation-api-qa
          image: 276780518338.dkr.ecr.ap-south-1.amazonaws.com/recommendations-service-qa:recommendation-qa-withoutconfig 
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-service
  labels:
    app: webapp1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /recommendations-api-qa/
spec:
  type: ClusterIP
  selector:
    app: webapp1
  ports:
    - port: 80
      targetPort: 80
