withALB/kube-manifest4/webapp2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      name: webapp2
      labels:
        app: webapp2
    spec:
      containers:
        - name: webapp2
          image: mohitknamdeo/mywebapp:4.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-nodeport-service
  labels:
    app: webapp2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
spec:
  type: NodePort
  selector:
    app: webapp2
  ports:
    - port: 80
      targetPort: 80
